--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
+dune:
+  title: Dune
   overview: MyText
-  release_date: 2017-11-06
-  inventory: 1
+  release_date: 1983-01-07
+  inventory: 3
 
-two:
-  title: MyString
+gremlins:
+  title: Gremlins
   overview: MyText
-  release_date: 2017-11-06
-  inventory: 1
+  release_date: 1982-10-31
+  inventory: 2
