--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+  title: Secret Life Of Pets
+  overview: A movie about pets
+  release_date: 12/27/2016
+  inventory: 2
 
 two:
-  title: MyString
-  overview: MyString
-  release_date: MyString
+  title: Baby Driver
+  overview: High speed chase galore
+  release_date: 07/07/2017
   inventory: 1
