--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+bill:
+  name: Bill Nye
   registered_at: MyString
   address: MyString
   city: MyString
