--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,12 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
+movie1:
+  title: Sleeping Beauty
   overview: MyString
   release_date: MyString
-  inventory: 1
+  inventory: 2
 
-two:
+movie2:
   title: MyString
   overview: MyString
   release_date: MyString
