--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+  title: Psycho
+  overview: A movie description of a horror movie
+  release_date: 1960-06-16
+  inventory: 8
 
 two:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+  title: Jaws
+  overview: An insatiable great white shark terrorizes the townspeople of Amity Island
+  release_date: 1975-06-19
+  inventory: 6
