--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -7,6 +7,7 @@ harry:
   city: Seattle
   state: WA
   postal_code: 98144
+  registered_at: 2017-11-05 22:19:39.093509
 
 sally:
   name: Sally Field
@@ -15,3 +16,4 @@ sally:
   city: Seattle
   state: WA
   postal_code: 98122
+  registered_at: 2017-11-06 22:19:39.102487
