--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+  title: "La La Land"
+  overview: "Two beautiful people in LA dancing."
+  release_date: "2017-01-01"
+  inventory: 5
 
 two:
-  title: MyString
-  overview: MyString
-  release_date: MyString
+  title: "The Room"
+  overview: "A successful banker's fiancee tempts and manipulates his best friend."
+  release_date: "2003-06-27"
   inventory: 1
