tested and wrote Movie#show method

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+harry_sally:
+  title: "Harry Met Sally"
+  overview: "Classic"
+  release_date: "1632-08-19"
+  inventory: 5
 
-two:
-  title: MyString
-  overview: MyString
-  release_date: MyString
-  inventory: 1
+nacho_libre:
+  title: "Nacho Libre"
+  overview: "Another Classic"
+  release_date: "1890-03-22"
+  inventory: 10
