--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -8,7 +8,7 @@ one:
   state: MyString
   postal_code: MyString
   phone: MyString
-  account_create: 1.5
+  account_credit: 1.5
 
 two:
   name: MyString
@@ -18,4 +18,4 @@ two:
   state: MyString
   postal_code: MyString
   phone: MyString
-  account_create: 1.5
+  account_credit: 1.5
