write movie controller actions show and create tests

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: thor
   overview: MyString
-  release_date: MyString
+  release_date: 1993-02-02
   inventory: 1
 
 two:
-  title: MyString
+  title: avatar
   overview: MyString
-  release_date: MyString
+  release_date: 2013-01-01
   inventory: 1
