got moview create action tests running

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -5,9 +5,11 @@ one:
   overview: MyString
   release_date: 1993-02-02
   inventory: 1
+  available_inventory: 1
 
 two:
   title: avatar
   overview: MyString
   release_date: 2013-01-01
   inventory: 1
+  available_inventory: 1
