Add rental YAML data and begin work on rental relationship testing

--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -4,8 +4,14 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+rental_one:
+  customer_id: customer_one
+  movie_id: movie_one
+  checkout_date: "2017-11-06"
+  due_date: "2017-11-13"
+
+rental_two:
+  customer_id: customer_two
+  movie_id: movie_two
+  checkout_date: "2017-11-07"
+  due_date: "2017-11-14"
