--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -8,6 +8,7 @@ averi:
   state: Wa
   postal_code: 98102
   phone: 2061234567
+  movies_checked_out_count: 0
 
 gale:
   name: Gale
@@ -17,3 +18,4 @@ gale:
   state: Wa
   postal_code: 98144
   phone: 3601239876
+  movies_checked_out_count: 10
