--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -1,15 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  customer_id: 1
-  movie_id: 1
-<<<<<<< HEAD
-  due_date: 2017-01-02
-=======
-  due_date: "MyString"
->>>>>>> 46398c21329df28ea8038741d21900b4964b3fa7
-
-two:
-  customer_id: 1
-  movie_id: 1
-  due_date: 2017-01-08 
+# one:
+#   customer_id: 1
+#   movie_id: 1
+#   due_date: 2017-01-02
+#
+# two:
+#   customer_id: 1
+#   movie_id: 1
+#   due_date: 2017-01-08
