Add rentals controller and model tests. Adjust rental and movie fixtures.

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -11,3 +11,9 @@ gremlins:
   overview: MyText
   release_date: 1982-10-31
   inventory: 2
+
+tnes:
+  title: The Neverending Story
+  overview: Fantastical
+  release_date: 1985-04-30
+  inventory: 3
