--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  customer_id: 1
-  movie_id: 1
+  customer: one
+  movie: three
 
 two:
-  customer_id: 1
-  movie_id: 1
+  customer: two
+  movie: one
