--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -4,8 +4,10 @@ one:
   customer: averi
   movie: magic
   due_date: 2017-11-10
+  created_at: 2017-11-06
 
 two:
   customer: averi
   movie: dates
-  due_date: 2017-11-5
+  due_date: 2017-11-05
+  created_at: 2017-11-01
