--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  customer_id: one
-  movie_id: one
+  customer: one
+  movie: one
   due_date: 2017-11-10
   checkout_date: 2017-11-07
   checkin_date:
 
 two:
-  customer_id: two
-  movie_id: two
+  customer: two
+  movie: two
   due_date: 2017-11-15
   checkout_date: 2017-11-07
   checkin_date:
