--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -4,10 +4,12 @@ one:
   title: Secret Life Of Pets
   overview: A movie about pets
   release_date: 12/27/2016
-  inventory: 2
+  inventory: 8
+  available_inventory: 8
 
 two:
   title: Baby Driver
   overview: High speed chase galore
   release_date: 07/07/2017
   inventory: 1
+  available_inventory: 1
