--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -5,9 +5,11 @@ one:
   overview: MyString
   release_date: MyString
   inventory: 1
+  available_invetory: 1
 
 two:
   title: MyString
   overview: MyString
   release_date: MyString
   inventory: 1
+  available_inventory: 1
