--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -3,13 +3,20 @@
 one:
   customer: one
   movie: one
-  due_date: 2017-11-10
-  checkout_date: 2017-11-07
+  due_date: <%= (Date.today - 2).to_s %>
+  checkout_date: <%= (Date.today - 9).to_s %>
   checkin_date:
 
 two:
   customer: two
   movie: two
-  due_date: 2017-11-15
-  checkout_date: 2017-11-07
+  due_date: <%= (Date.today + 7).to_s %>
+  checkout_date: <%= (Date.today).to_s %>
   checkin_date:
+
+checked_in:
+  customer: one
+  movie: one
+  due_date: <%= (Date.today - 2).to_s %>
+  checkout_date: <%= (Date.today - 9).to_s %>
+  checkin_date: <%= (Date.today - 2).to_s %>
