--- a/test/fixtures/rentals.yml
+++ b/test/fixtures/rentals.yml
@@ -14,6 +14,12 @@ rental2:
   movie: movie2
   due_date: 2017-11-7
 
+rental22:
+  customer: bill
+  movie: movie2
+  checkout_date: 2017-11-1
+  due_date: 2017-11-7
+
 rental3:
   customer: bill
   movie: movie1
